# hex20-disaster-satellite

./: .gitignore  README.md  main.py  pyproject.toml  run_preprocessing.py
src/: authenticate_earthdata.py  authenticate_gee.py
src/data/: dixie_fire_acquisition.py  preprocessing.py
src/models/: dataset.py  train.py  unet_model.py  utils.py
tasks/: datasets.md  project_description.md  project_report.md  project_timeline.md  research_and_references.md  task_breakdown.md  week_1_tasks.md
